comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A voluptatem perspiciatis nisi praesentium maxime alias deleniti fugit cupiditate mollitia suscipit odit, eaque nobis eum! Reiciendis fuga vel quod at obcaecati!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, quod odio? Porro, fugiat. Laboriosam obcaecati voluptas quasi quam fugiat corrupti unde ex? Nemo atque alias temporibus animi provident perferendis ut?</p>
         </article>
     </main>
 </body>
